--- a/main.html
+++ b/main.html
@@ -3,10 +3,10 @@
     <head>
         <title>Recetas Argentinas</title>
         <script src="../logica/main.js"></script>
-        <link rel="stylesheet" href="../Planillas-de-estilos/main.css">
+        <link rel="stylesheet" href="../Grupo13/Planillas-de-estilos/main.css">
     </head>
     <nav>
-        <a class="pestania" href="contacto.html">Registrarse</a>
+        <a class="pestania" href="../Grupo13/templates/Contacto.html">Registrarse</a>
         <a class="pestania" href="">Recetas</a>
         <a class="pestania" href="">Inicio</a>
         <a class="pestania" href="">Faq</a>
@@ -15,7 +15,7 @@
         <h1>Comidas Argentinas</h1>
         <div class="main_div">
             <div class="food_card">
-                <img src = "../Imagenes/Empanadas.jpg" height="200">
+                <img src = "../Grupo13/Imagenes/empanadas-argentinas.jpg" height="200">
                 <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Empanadas</p>
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="food_card">
-                <img src = "../Imagenes/chori.jpg" height="200">
+                <img src = "../Grupo13/Imagenes/chori.jpg" height="200">
                 <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Choripan</p>
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="food_card">
-                <img src = "../Imagenes/salsa-criolla.jpg" height="200">
+                <img src = "../Grupo13/Imagenes/salsa-criolla.jpg" height="200">
                 <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Salsa criolla</p>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="food_card">
-                <img src = "../Imagenes/tortas-fritas.jpg" height="200">
+                <img src = "../Grupo13/Imagenes/tortas-fritas.jpg" height="200">
                 <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Torta fritas</p>
