--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabor Argentino: Recetas Caseras y Auténticas</title>
     <h1></h1>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../Grupo13/Planillas-de-estilos/styles.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <a href="index.html">
-         <img src="img/logo-9976.png" alt="Logo">
+            <a href="../Grupo13/index.html">
+         <img src="../Grupo13/Imagenes/logo-9976.png" alt="Logo">
         </a>   
          <abbr title="Home"></abbr>
         </div>
@@ -22,16 +22,16 @@
     </div>
         <div class="redes-sociales">
             <a href="https://www.facebook.com /Sabor-Argentino.">
-            <img src="img/facebook.png">
+            <img src="../Grupo13/Imagenes/facebook.png">
         </a>
             <a href="https://www.instagram.com/Sabor-Argentino">
-            <img src="img/instagram.png">
+            <img src="../Grupo13/Imagenes/instagram.png">
         </a>
         <a href="https://www.tiktok.com/@Sabor-Argentino">
-            <img src="img/tik-tok.png">
+            <img src="../Grupo13/Imagenes/tik-tok.png">
         </a>
         <a href="https://api.whatsapp.com/send?phone=1155555555">
-            <img src="img/whatsapp.png">
+            <img src="../Grupo13/Imagenes/whatsapp.png">
         </a>
         </div>
     </header>
@@ -45,23 +45,23 @@
     </nav>
     <section id="empanadas">
         <h2>Empanadas</h2>
-        <a href="receta4.html">
-            <img src="img/empanadas-argentinas.jpg" alt="Receta de empanadas">
+        <a href="../Grupo13/templates/receta4.html">
+            <img src="../Grupo13/Imagenes/empanadas-argentinas.jpg" alt="Receta de empanadas">
            <abbr title="Receta"></abbr>
         </a>
         <p>Las empanadas argentinas son un plato típico de la gastronomía del país, consisten en una masa rellena de carne, pollo, jamón y queso, entre otros ingredientes.</p>
     </section>
     <section id="asado">
         <h2>Asado</h2>
-        <a href="receta3.html">
-            <img src="img/asado.jpg" alt="Receta de asado">
+        <a href="../Grupo13/templates/receta3.html">
+            <img src="../Grupo13/Imagenes/asado.jpg" alt="Receta de asado">
            <abbr title="Receta"></abbr>
         </a>
         <p>El asado argentino es una de las comidas más tradicionales del país, se prepara a la parrilla y se suele acompañar con chimichurri, ensaladas y vino tinto.</p>
     </section>
     <section id="milanesa">
         <h2>Milanesa</h2>
-        <a href="receta1.html">
+        <a href="../Grupo13/templates/receta1.html">
             <img src="img/mila.jpg" alt="Receta de milanesa">
            <abbr title="Receta"></abbr>
         </a>
@@ -69,7 +69,7 @@
     </section>
     <section id="locro">
         <h2>Locro</h2>
-        <a href="receta2.html">
+        <a href="../Grupo13/templates/receta2.html">
             <img src="img/locro.jpg" alt="Receta de locro">
            <abbr title="Receta"></abbr>
         </a>
