--- a/main.html
+++ b/main.html
@@ -3,20 +3,26 @@
     <head>
         <title>Recetas Argentinas</title>
         <script src="../logica/main.js"></script>
+        <link rel="icon" href="../Grupo13/Imagenes/logo-9976.ico">
         <link rel="stylesheet" href="../Grupo13/Planillas-de-estilos/main.css">
     </head>
     <nav>
-        <a class="pestania" href="../Grupo13/templates/Contacto.html">Registrarse</a>
-        <a class="pestania" href="">Recetas</a>
+        <img class="logo-container" src="../Grupo13/Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
+        <a class="pestania" href="../Grupo13/templates/Contacto.html">Contactanos</a>
+        <a class="pestania" href="../Grupo13/main.html">Recetas</a>
         <a class="pestania" href="">Inicio</a>
         <a class="pestania" href="">Faq</a>
+        <img class="logo-container" src="../Grupo13/Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
+
     </nav>
     <body>
         <h1>Comidas Argentinas</h1>
         <div class="main_div">
             <div class="food_card">
-                <img src = "../Grupo13/Imagenes/empanadas-argentinas.jpg" height="200">
-                <div class="descripcion">
+                <a href="../Grupo13/templates/receta4.html">
+                    <img class="foto-comida" src = "../Grupo13/Imagenes/Empanadas.jpg" height="200">
+                </a>
+               <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Empanadas</p>
                     <p><b>Descripcion:</b></p>
@@ -26,7 +32,7 @@
                 </div>
             </div>
             <div class="food_card">
-                <img src = "../Grupo13/Imagenes/chori.jpg" height="200">
+                <img class="foto-comida" src = "../Grupo13/Imagenes/chori.jpg" height="200">
                 <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Choripan</p>
@@ -37,7 +43,7 @@
                 </div>
             </div>
             <div class="food_card">
-                <img src = "../Grupo13/Imagenes/salsa-criolla.jpg" height="200">
+                <img class="foto-comida" src = "../Grupo13/Imagenes/salsa-criolla.jpg" height="200">
                 <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Salsa criolla</p>
@@ -48,7 +54,7 @@
                 </div>
             </div>
             <div class="food_card">
-                <img src = "../Grupo13/Imagenes/tortas-fritas.jpg" height="200">
+                <img class="foto-comida" src = "../Grupo13/Imagenes/tortas-fritas.jpg" height="200">
                 <div class="descripcion">
                     <p><b>Nombre:</b></p>
                     <p>Torta fritas</p>
@@ -66,6 +72,6 @@
             <li><a href="https://elgourmet.com/recetas/">El gourmet</a></li>
             <li><a href="https://www.lanacion.com.ar/recetas/">La Nacion</a></li>
             <li><a href="https://www.paulinacocina.net/recetas">PaulinaCocina</a></li>
-        
+            <p>&copy; 2024 Sabor Argentino: Recetas Caseras y Auténticas</p>
     </footer>
 </html>
