--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="milanesa">
         <h2>Milanesa</h2>
         <a href="../Grupo13/templates/receta1.html">
-            <img src="img/mila.jpg" alt="Receta de milanesa">
+            <img src="../Grupo13/Imagenes/mila.jpg" alt="Receta de milanesa">
            <abbr title="Receta"></abbr>
         </a>
         <p>La milanesa argentina es una carne empanada y frita, muy popular en el país. Se puede hacer con carne de vaca, pollo o cerdo, y se sirve con papas fritas o ensaladas.</p>
@@ -70,7 +70,7 @@
     <section id="locro">
         <h2>Locro</h2>
         <a href="../Grupo13/templates/receta2.html">
-            <img src="img/locro.jpg" alt="Receta de locro">
+            <img src="../Grupo13/Imagenes/locro.jpg" alt="Receta de locro">
            <abbr title="Receta"></abbr>
         </a>
         <p>El locro argentino se prepara una carne empanada y frita, muy popular en el país. Se puede hacer con carne de vaca, pollo o cerdo, y se sirve con papas fritas o ensaladas.</p>
