--- a/main.html
+++ b/main.html
@@ -20,49 +20,55 @@
         <div class="main_div">
             <div class="food_card">
                 <a href="../Grupo13/templates/receta4.html">
-                    <img class="foto-comida" src = "../Grupo13/Imagenes/Empanadas.jpg" height="200">
+                    <img class="foto-comida" src = "../Grupo13/Imagenes/Empanadas.jpg" >
+                    <div class="descripcion">
+                        <p><b>Nombre:</b></p>
+                        <p>Empanadas</p>
+                        <p><b>Descripcion:</b></p>
+                        <p>Las empanadas argentinas son un plato típico de la gastronomía del país, consisten en una masa rellena de carne, pollo, jamón y queso, entre otros ingredientes.</p>
+                        <P><b>Puntuacion: </b></P>
+                        <p>5 estrellas</p>
+                    </div>
                 </a>
-               <div class="descripcion">
-                    <p><b>Nombre:</b></p>
-                    <p>Empanadas</p>
-                    <p><b>Descripcion:</b></p>
-                    <p>Empanada tucumana del horno del abuela</p>
-                    <P><b>Puntuacion: </b></P>
-                    <p>5 estrellas</p>
-                </div>
             </div>
             <div class="food_card">
-                <img class="foto-comida" src = "../Grupo13/Imagenes/chori.jpg" height="200">
-                <div class="descripcion">
-                    <p><b>Nombre:</b></p>
-                    <p>Choripan</p>
-                    <p><b>Descripcion:</b></p>
-                    <p>Choripan a la parrilla de las cordilleras jujenias con oregano, cebolla y otras cosas</p>
-                    <P><b>Puntuacion: </b></P>
-                    <p>1 estrellas</p>
-                </div>
+                <a href="../Grupo13/templates/receta2.html">
+                    <img class="foto-comida" src = "../Grupo13/Imagenes/locro.jpg" width="200px" >
+                    <div class="descripcion">
+                        <p><b>Nombre:</b></p>
+                        <p>Locro</p>
+                        <p><b>Descripcion:</b></p>
+                        <p>El locro argentino se prepara una carne empanada y frita, muy popular en el país. Se puede hacer con carne de vaca, pollo o cerdo, y se sirve con papas fritas o ensaladas.</p>
+                        <P><b>Puntuacion: </b></P>
+                        <p>1 estrellas</p>
+                    </div>
+                </a>
             </div>
             <div class="food_card">
-                <img class="foto-comida" src = "../Grupo13/Imagenes/salsa-criolla.jpg" height="200">
-                <div class="descripcion">
-                    <p><b>Nombre:</b></p>
-                    <p>Salsa criolla</p>
-                    <p><b>Descripcion:</b></p>
-                    <p>Salsa criolla portena con los ingredientes del cheff pelado ese de master cheff</p>
-                    <P><b>Puntuacion: </b></P>
-                    <p>3 estrellas</p>
-                </div>
+                <a href="../Grupo13/templates/receta3.html">
+                    <img class="foto-comida" src = "../Grupo13/Imagenes/asado.jpg" >
+                    <div class="descripcion">
+                        <p><b>Nombre:</b></p>
+                        <p>Asado</p>
+                        <p><b>Descripcion:</b></p>
+                        <p>El asado argentino es una de las comidas más tradicionales del país, se prepara a la parrilla y se suele acompañar con chimichurri, ensaladas y vino tinto.f</p>
+                        <P><b>Puntuacion: </b></P>
+                        <p>3 estrellas</p>
+                    </div>
+                </a>
             </div>
             <div class="food_card">
-                <img class="foto-comida" src = "../Grupo13/Imagenes/tortas-fritas.jpg" height="200">
-                <div class="descripcion">
-                    <p><b>Nombre:</b></p>
-                    <p>Torta fritas</p>
-                    <p><b>Descripcion:</b></p>
-                    <p>Torta fritas del sur del pais traidas por los indios mapuches de hace +400 anios</p>
-                    <P><b>Puntuacion: </b></P>
-                    <p>2 estrellas</p>
-                </div>
+                <a href="../Grupo13/templates/receta1.html">
+                    <img class="foto-comida" src = "../Grupo13/Imagenes/mila.jpg" >
+                    <div class="descripcion">
+                         <p><b>Nombre:</b></p>
+                         <p>Milanesa</p>
+                         <p><b>Descripcion:</b></p>
+                         <p>La milanesa argentina es una carne empanada y frita, muy popular en el país. Se puede hacer con carne de vaca, pollo o cerdo, y se sirve con papas fritas o ensaladas.</p>
+                         <P><b>Puntuacion: </b></P>
+                         <p>2 estrellas</p>
+                    </div>
+                </a>
             </div>
         </div>
     </body>
