--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
         <img class="logo-container" src="../Grupo13/Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         <a class="pestania" href="../Grupo13/templates/Contacto.html">Contactanos</a>
-        <a class="pestania" href="../Grupo13/main.html">Recetas</a>
+        <a class="pestania" href="../Grupo13/index.html">Recetas</a>
         <a class="pestania" href="">Inicio</a>
         <a class="pestania" href="">Faq</a>
         <img class="logo-container" src="../Grupo13/Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
