--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <p><b>Nombre:</b></p>
                         <p>Locro</p>
                         <p><b>Descripcion:</b></p>
-                        <p>El locro argentino se prepara una carne empanada y frita, muy popular en el país. Se puede hacer con carne de vaca, pollo o cerdo, y se sirve con papas fritas o ensaladas.</p>
+                        <p>El locro argentino es una sopa espesa y consistente a base de maíz, generalmente maíz blanco o maíz amarillo, y otros ingredientes como carne, chorizo, papas, zapallo (calabaza), cebolla, ajo, entre otros.</p>
                         <P><b>Puntuacion: </b></P>
                         <p>1 estrellas</p>
                     </div>
