Tp con animaciones

--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
     <head>
         <title>Recetas Argentinas</title>
-        <script src="../logica/main.js"></script>
-        <link rel="icon" href="../Grupo13/Imagenes/logo-9976.ico">
-        <link rel="stylesheet" href="../Grupo13/Planillas-de-estilos/main.css">
+        <link rel="icon" href="./Imagenes/logo-9976.ico">
+        <link rel="stylesheet" href="./Planillas-de-estilos/main.css">
     </head>
     <nav>
-        <img class="logo-container" src="../Grupo13/Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
-        <a class="pestania" href="../Grupo13/templates/Contacto.html">Contactanos</a>
-        <a class="pestania" href="../Grupo13/index.html">Recetas</a>
+        <img class="logo-container" src="./Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
+        <a class="pestania" href="./templates/Contacto.html">Contactanos</a>
+        <a class="pestania" href="./index.html">Recetas</a>
         <a class="pestania" href="">Inicio</a>
         <a class="pestania" href="">Faq</a>
-        <img class="logo-container" src="../Grupo13/Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
+        <img class="logo-container" src="./Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
 
     </nav>
     <body>
@@ -20,8 +19,10 @@
         <h1>Comidas Argentinas</h1>
         <div class="main_div">
             <div class="food_card">
-                <a href="../Grupo13/templates/receta4.html">
-                    <img class="foto-comida" src = "../Grupo13/Imagenes/Empanadas.jpg" >
+                <a href="./templates/receta4.html">
+                    <video id="video" autoplay loop>
+                        <source src="./Imagenes/anim_empan.mp4" height: 20px width: 40px type="video/mp4">
+                    </video>
                     <div class="descripcion">
                         <p><b>Nombre:</b></p>
                         <p>Empanadas</p>
@@ -33,8 +34,10 @@
                 </a>
             </div>
             <div class="food_card">
-                <a href="../Grupo13/templates/receta2.html">
-                    <img class="foto-comida" src = "../Grupo13/Imagenes/locro.jpg" width="200px" >
+                <a href="./templates/receta2.html">
+                    <video id="video" autoplay loop>
+                        <source src="./Imagenes/anim_locro.mp4" height: 20px width: 40px type="video/mp4">
+                    </video>
                     <div class="descripcion">
                         <p><b>Nombre:</b></p>
                         <p>Locro</p>
@@ -46,8 +49,10 @@
                 </a>
             </div>
             <div class="food_card">
-                <a href="../Grupo13/templates/receta3.html">
-                    <img class="foto-comida" src = "../Grupo13/Imagenes/asado.jpg" >
+                <a href="./templates/receta3.html">
+                    <video id="video" autoplay loop>
+                        <source src="./Imagenes/anim_asado.mp4" height: 20px width: 40px type="video/mp4">
+                    </video>
                     <div class="descripcion">
                         <p><b>Nombre:</b></p>
                         <p>Asado</p>
@@ -59,8 +64,10 @@
                 </a>
             </div>
             <div class="food_card">
-                <a href="../Grupo13/templates/receta1.html">
-                    <img class="foto-comida" src = "../Grupo13/Imagenes/mila.jpg" >
+                <a href="./templates/receta1.html">
+                    <video id="video" autoplay loop>
+                        <source src="./Imagenes/anim_mila.mp4" height: 20px width: 40px type="video/mp4">
+                    </video>    
                     <div class="descripcion">
                          <p><b>Nombre:</b></p>
                          <p>Milanesa</p>
