--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a class="pestania" href="./templates/Contacto.html">Contactanos</a>
         <a class="pestania" href="./index.html">Recetas</a>
         <a class="pestania" href="">Inicio</a>
-        <a class="pestania" href="">Faq</a>
+        <a class="pestania" href="./templates/Faq.html">Faq</a>
         <img class="logo-container" src="./Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
 
     </nav>
