--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <nav>
             <img class="logo-container" src="Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
-            <a class="pestania" href="templates/Contacto.html">Contactanos</a>
-            <a class="pestania" href="templates/main.html">Recetas</a>
+            <a class="pestania" href="Templates/Contacto.html">Contactanos</a>
+            <a class="pestania" href="Templates/main.html">Recetas</a>
             <a class="pestania" href="Index.html">Inicio</a>
-            <a class="pestania" href="templates/Faq.html">Faq</a>
+            <a class="pestania" href="Templates/Faq.html">Faq</a>
             <img class="logo-container" src="Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         </nav>
         <img src="Imagenes/logo-9976.png" width="300" style="margin-left: 13em;">
