--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <a class="pestania" href="Templates/Faq.html">Faq</a>
             <img class="logo-container" src="Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         </nav>
-        <img src="Imagenes/logo-9976.png" width="300" style="margin-left: 13em;">
+        <div class="start-container">
+            <img src="Imagenes/logo-9976.png" width="300" >
         <div class = "muestra">
             <img src="Imagenes/asado.jpg" alt="">
             <img src="Imagenes/empanadas-argentinas.jpg" alt="">
