fix form precio & error iconos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="pestania" href="Index.html">Inicio</a>
             <a class="pestania" href="Templates/main.html">Recetas</a>
             <a class="pestania" href="Templates/Contacto.html">Contactanos</a>
-            <a class="pestania" href="Templates/Faq.html">Crud</a>
+            <a class="pestania" href="Templates/Crud.html">Crud</a>
             <img class="logo-container" src="Imagenes/logo-9976.png" alt="Logo" width="80" height="30">
         </nav>
         <div class="start-container">
